kubernetes/backend-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: anujp4061/wanderlust-backend:latest
        ports:
        - containerPort: 5000
