kubernetes/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: my-app
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
